--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
             body {
                 font-family: Georgia, Arial, Sans-Serif;
             }
+            p, div { margin-bottom: 1em; }
         </style>
     </head>
     <body>
