--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
             body {
                 font-family: Georgia, Arial, Sans-Serif;
             }
-            p, div { margin-bottom: 1em; }
+            p, div, h1, h2, h3, h4, h5, h6 { margin-bottom: 1em; }
         </style>
     </head>
     <body>
