--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>{% if page.title %}{{ page.title }} &mdash; {% endif %}The Art of Product</title>
-        <style type="text/css">
-            * { margin: 0; padding: 0; }
-            html, body { height: 100%; }
-            body {
-                font-family: Georgia, Arial, Sans-Serif;
-            }
-            p, div, h1, h2, h3, h4, h5, h6 { margin-bottom: 1em; }
-        </style>
-    </head>
-    <body>
-        {{ content }}
-    </body>
+<head>
+    <title>{% if page.title %}{{ page.title }} &mdash; {% endif %}the Art of Product</title>
+    <link href='http://fonts.googleapis.com/css?family=Playfair+Display|Open+Sans|Merriweather+Sans' rel='stylesheet' type='text/css'>
+    <style type="text/css">
+        * { margin: 0; padding: 0; }
+        html, body { height: 100%; }
+        body { font-family: 'Open Sans', sans-serif; font-size: 10pt; }
+        .cw { width:960px; margin: 0 auto; }
+        h1, h2, h3, h4, h5, h6 { font-weight: normal; font-size: 10pt; }
+    </style>
+</head>
+<body>
+    <div style="background-color:#eee;">
+        <div class="cw" style="padding: 1em 0;overflow:hidden;">
+            <div style="float:right;">
+                <span style="margin-left:14px;color:#555;">HOME</span>
+                <span style="margin-left:14px;color:#555;">ABOUT</span>
+                <span style="margin-left:14px;color:#555;">CONTACT</span>
+            </div>
+            <div style="font-family:'Playfair Display';font-weight:bold;font-size:16px;float:left;">the Art of Product</div>
+
+        </div>
+    </div>
+    <div style="background-color:#eee;display:none;">
+        <div class="cw">splash</div>
+    </div>
+    <div class="cw" style="margin-top:20px;">
+        <div style="float:left;width:600px;">
+            <div style="border-top:1px solid #ccc;padding-top:6px;">
+                {{ content }}
+            </div>
+        </div>
+        <div style="margin-left:620px;">
+            <div>ABOUT THE AUTHOR</div>
+            <br/>
+            <div>Hi, I'm Peter. I help people build products. I also do a double somersault on the Flying Trapeze.</div>
+        </div>
+    </div>
+</body>
 </html>
