--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,13 @@
         body { font-family: 'Open Sans', sans-serif; font-size: 10pt; }
         .cw { width:960px; margin: 0 auto; }
         h1, h2, h3, h4, h5, h6 { font-weight: normal; font-size: 10pt; }
+
+        h1 { font-family:'Open Sans';font-size:22px; }
+        h2 { font-size: 18px; }
+
+        p, h1, h2, h3, h4, h5, h6 { margin-bottom: 12px; }
+
+        ul { margin-left: 16px;}
     </style>
 </head>
 <body>
