--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 
         p, h1, h2, h3, h4, h5, h6 { margin-bottom: 12px; }
 
-        ul { margin-left: 16px;}
+        ul { margin-left: 16px; margin-bottom:12px;}
     </style>
 </head>
 <body>
