--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,9 @@
         p, h1, h2, h3, h4, h5, h6 { margin-bottom: 12px; }
 
         ul { margin-left: 16px; margin-bottom:12px;}
+
+        blockquote { border-left: 3px solid #999; background-color: #f9f9f9; padding: 6px 10px; margin-bottom:12px; }
+        blockquote p { margin-bottom: 0px; }
     </style>
 </head>
 <body>
